Fixes hr margin on smaller screens.

--- a/style.css
+++ b/style.css
@@ -213,4 +213,8 @@ footer {
 		height: 25vh;
 		width: 90%;
 	}
+
+	main article hr {
+		margin: 1rem 0;
+	}
 }
